[workspace]
members = [
    "common",
    "basic",
    "autoscroll_starfield",
    "camera_follow",
    "zoom_parallax",
    "pixel_art_snap",
    "finite_bounds",
    "multi_rig",
    "stress_many_layers",
    "forest_scene",
    "city_skyline",
    "platformer_demo",
    "endless_runner",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = "0.18"
saddle-rendering-parallax-scroller = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
