[package]
name = "saddle-rendering-parallax-scroller-example-multi_rig"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
saddle-rendering-parallax-scroller = { workspace = true }
saddle-rendering-parallax-scroller-example-common = { path = "../common" }

[lints]
workspace = true
